# rrcd

./: .gitignore  CHANGELOG.md  EX1-RRCD.md  LICENSE  README.md  VERSIONING.md  pyproject.toml
.github/workflows/: ci.yml
rrcd/: __main__.py  cli.py  codec.py  commands.py  config.py  constants.py  envelope.py  logging_config.py  messages.py  paths.py  resources.py  rooms.py  router.py  service.py  session.py  stats.py  trust.py  util.py
tests/: test_action_router.py  test_cli.py  test_codec.py  test_config.py  test_envelope.py  test_resource.py  test_room_notifications.py
