[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rrcd"
version = "0.1.1"
description = "Reticulum Relay Chat daemon (hub service)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["reticulum", "rns", "chat", "daemon", "cbor"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
]
dependencies = [
  "cbor2>=5.6.0",
  "rns>=0.8.0",
  "tomlkit>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/kc1awv/rrcd"
Repository = "https://github.com/kc1awv/rrcd"
Issues = "https://github.com/kc1awv/rrcd/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[project.scripts]
rrcd = "rrcd.cli:main"

[tool.setuptools]
packages = ["rrcd"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
